# ONANA_GREGOIRE_24G2060

./: .gitignore  Dockerfile  README.md  render.yaml
backend-python/: app.py  requirements.txt  sentiment.py
backend-python/scripts/: courses.json
backend-python/templates/: swagger.html
backend-rust/: Cargo.toml
backend-rust/src/: main.rs
frontend-new/: package-lock.json  package.json
frontend-new/src/app/: layout.tsx  page.tsx
frontend-new/src/app/about/: page.tsx
frontend-new/src/lib/: api.ts
scripts/: emails.json  extract_pdf.py  extract_students.py  students.json
